--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,9 @@
-version: 0.1
+version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      nodejs: 10
     commands:
       - printenv
       - npm install
@@ -11,7 +13,7 @@ phases:
   post_build:
     commands:
       - mkdir -p build
-      - tar jcf build/myApp-$(date +%Y%m%d%H%m%S).tar.bz2 .eslintrc.js .gitignore README.md buildspec.yml package.json serverless.yml src test
+      - tar jcf build/myApp-$(date +%Y%m%d%H%m%S).tar.bz2 .gitignore README.md buildspec.yml package.json serverless.yml src
       - npm install -g serverless
       - serverless -v -s $(echo ${CODEBUILD_INITIATOR} | cut -d'/' -f2 | cut -d'_' -f3) deploy
 
